pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/unbound_local_error2.py
def f(c):
    def g():
        nonlocal x
        print(x)

    if c:
        x = 42

    return g

f(False)()